--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     //GSON
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     //GLIDE
     implementation 'com.github.bumptech.glide:glide:4.12.0'
